# pyrion-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  dependency_graph.mmd  pyrion.sh
.run/: Debugger.run.xml
as5600/: Cargo.toml
as5600/src/: config.rs  driver.rs  error.rs  lib.rs  registers.rs
bldc_logic/: Cargo.toml
bldc_logic/src/: lib.rs
bldc_logic/src/helpers/: clarke_transformation.rs  mod.rs  park_transformation.rs
bldc_logic/src/motor_controller/: config.rs  controller.rs  mod.rs  units.rs
command_parser/: Cargo.toml
command_parser/src/: lib.rs
crates/bootloader/: Cargo.toml  build.rs  memory.x
crates/bootloader/src/: dfu.rs  main.rs
crates/command_handler/: Cargo.toml
crates/command_handler/src/: handler.rs  lib.rs  telemetry.rs
crates/communication/: Cargo.toml
crates/communication/src/: channel_types.rs  communication_handler.rs  lib.rs  packet.rs
crates/controllers/controller_shared/: Cargo.toml
crates/controllers/controller_shared/src/: command.rs  converters.rs  core.rs  io.rs  lib.rs  state.rs  strategy.rs
crates/controllers/foc/: Cargo.toml
crates/controllers/foc/src/: clarke_transformation.rs  core.rs  lib.rs  park_transformation.rs  snapshot.rs  space_vector_modulation.rs  state.rs
crates/drivers/adc/: Cargo.toml
crates/drivers/adc/src/: adc.rs  channels_macro.rs  config.rs  interrupt.rs  lib.rs  pac.rs  pac_instance.rs  state.rs  trigger_edge.rs
crates/drivers/adc/src/injected/: configured.rs  interrupt.rs  mod.rs  pac.rs  running.rs  triggers.rs
crates/drivers/as5600/: Cargo.toml
crates/drivers/as5600/src/: config.rs  driver.rs  error.rs  registers.rs
crates/drivers/inverter/: Cargo.toml
crates/drivers/inverter/src/: inverter.rs  lib.rs
crates/firmware/: Cargo.toml  memory.x
crates/firmware/.cargo/: config.toml
crates/firmware/src/: app.rs  board.rs  main.rs  version.rs
crates/firmware/src/app/: adc.rs  communication.rs  encoder.rs  leds.rs  mod.rs  uart.rs  usb.rs
crates/firmware/src/app/shaft_position/: as5600.rs  mod.rs
crates/hardware/: Cargo.toml
crates/hardware/src/: board.rs  config.rs  irqs.rs  lib.rs  serial_number.rs  usb.rs
crates/led_manager/: Cargo.toml
crates/led_manager/src/: lib.rs
crates/server/: Cargo.toml  build.rs  configuration.yaml
crates/server/src/: configuration.rs  lib.rs  main.rs  proto.rs  startup.rs
crates/server/src/features/: connection_string.rs  interface_kind.rs  mod.rs
crates/server/src/features/interface/: device_info.rs  error.rs  manager.rs  mod.rs  serial.rs
crates/server/src/features/session/: codec.rs  error.rs  handle.rs  mod.rs
crates/server/src/interface/: common.rs  error.rs  manager.rs  mod.rs  serial.rs
crates/server/src/proto_services/: discovery.rs  mod.rs  session.rs
crates/transport/: Cargo.toml
crates/transport/src/: command.rs  decoder.rs  encoder.rs  helpers.rs  lib.rs  packet.rs  parser.rs
crates/transport/src/command/: decoder.rs  encoder.rs  mod.rs
crates/transport/src/event/: decoder.rs  encoder.rs  mod.rs
crates/update_manager/: Cargo.toml
crates/update_manager/src/: lib.rs
crates/user_config/: Cargo.toml
crates/user_config/src/: lib.rs
crates/utils/crc_engine/: Cargo.toml
crates/utils/crc_engine/src/: engine.rs  hardware.rs  lib.rs  software.rs
crates/utils/logging/: Cargo.toml
crates/utils/logging/src/: error_register.rs  fault_register.rs  freq_meter.rs  lib.rs  macro_logs.rs
crates/utils/pid/: Cargo.toml
crates/utils/pid/src/: lib.rs  pi.rs
crates/utils/units/: Cargo.toml
crates/utils/units/src/: lib.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: angle_sensor.rs  as5600_angle_sensor.rs  config.rs  current_sensor.rs  i2c.rs  main.rs  map.rs  motor_driver.rs  rp_motor_driver.rs  serial.rs
firmware/src/advanced_adc/: adc.rs  config.rs  core.rs  injected.rs  interrupt.rs  mod.rs  pac.rs  pac_instance.rs  prescaler.rs  regular.rs  trigger_edge.rs
firmware/src/advanced_adc/injected/: config.rs  configured.rs  interrupt.rs  mod.rs  pac.rs  running.rs  triggers.rs
firmware/src/advanced_adc/regular/: config.rs  configured.rs  triggers.rs
foc/: Cargo.toml  state_machine.mmd
foc/src/: lib.rs  state.rs  state_machine.rs
foc/src/functions/: adc_conversion.rs  mod.rs
foc/src/internal_functions/: clarke_transformation.rs  mod.rs  park_transformation.rs
foc/src/modules/: adc_conversion.rs  angle.rs  clarke_transformation.rs  controller.rs  current.rs  mod.rs  park_transformation.rs  shaft.rs
foc/src/modules/angle/: calibration_accumulator.rs  mod.rs  motor.rs
foc/src/modules/current/: calibration_accumulator.rs  mod.rs  motor.rs
foc/src/modules/models/: electrical_angle.rs  mod.rs
hardware_abstraction/: Cargo.toml
hardware_abstraction/src/: angle_sensor.rs  current_sensor.rs  lib.rs  motor_driver.rs  units.rs
hardware_abstraction/src/helpers/: mod.rs
hardware_abstraction/src/models/: angle.rs  direction.rs  mod.rs
interface/: Cargo.toml  serial_command.md
interface/src/: command.rs  execute.rs  lib.rs
interface/src/serial/: decoder.rs  errors.rs  mod.rs  parser.rs
shared/: Cargo.toml
shared/src/: lib.rs  log.rs  units.rs
shared/src/functions/: mod.rs
shared/src/functions/atan/: function.rs  generated.rs  mod.rs
shared/src/units/: angle.rs  cos_lut.rs  current.rs  direction.rs  low_pass_filter.rs  mod.rs  resistance.rs  velocity.rs  voltage.rs
shared/src/utils/: pid.rs
stm32g4_adc/: Cargo.toml
stm32g4_adc/src/: adc.rs  lib.rs  pac.rs  prescaler.rs  state.rs
stm32g4_adc/src/injected/: configured.rs  interrupt.rs  mod.rs  pac.rs  running.rs
stm32g4_adc/src/regular/: config.rs  configured.rs  mod.rs  pac.rs  running.rs  triggers.rs
