[workspace]
members = ["crates/drivers/as5600", "crates/drivers/adc", "crates/hal", "crates/math", "crates/utils/logging", "crates/firmware", "crates/drivers/inverter", "crates/controllers/foc", "crates/utils/pid", "crates/utils/units", "crates/controllers/controller_shared", "crates/utils/crc_engine", "crates/transport", "crates/server", "crates/command_handler"]
resolver = "3"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

