[package]
name = "as5600"
version = "0.1.0"
edition = "2024"

[features]
defmt = ["dep:defmt", "embedded-hal-async/defmt-03", "shared/defmt"]
log = ["shared/log"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
shared = { path = "../shared" }