[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embassy-stm32 = { version = "0.4.0", features = ["defmt", "time", "time-driver-any", "stm32g474re", "single-bank", "memory-x", "unstable-pac", "exti"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }

as5600 = { path = "../as5600", features = ["defmt"] }
hardware-abstraction = { path = "../hardware_abstraction", features = ["defmt"] }
foc = { path = "../foc", features = ["defmt"] }
shared = { path = "../shared", features = ["defmt"] }
interface = { path = "../interface", features = ["defmt"] }

[package.metadata.embassy]
build = [
    { target = "thumbv7em-none-eabi", artifact-dir = "out/firmware" }
]
