[package]
name = "interface"
version = "0.1.0"
edition = "2024"

[features]
defmt = ["dep:defmt", "heapless/defmt", "error_set/defmt", "foc/defmt", "shared/defmt", "embassy-sync/defmt"]
log = ["error_set/log", "foc/log", "shared/log", "embassy-sync/log"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.9.1" }
error_set = { version = "0.8.5" }
fixed = "1.29.0"
embassy-sync = "0.7.2"
foc = { path = "../foc" }
shared = { path = "../shared" }