[package]
name = "command-handler"
version = "0.1.0"
edition = "2024"

[features]
defmt = ["dep:defmt", "logging/defmt", "controller-shared/defmt", "transport/defmt", "embassy-time/defmt", "embassy-boot-stm32/defmt", "embassy-sync/defmt", "embassy-embedded-hal/defmt", "update-manager/defmt"]
log = ["logging/log", "embassy-time/log", "embassy-sync/log", "embassy-boot-stm32/log", "update-manager/log"]

[dependencies]
controller-shared = { path = "../controllers/controller_shared" }
defmt = { version = "1.0.1", optional = true }
logging = { path = "../utils/logging", features = ["error-register"] }
transport = { path = "../transport" }
units = { path = "../utils/units" }
embassy-embedded-hal = { version = "0.5.0" }
embassy-boot-stm32 = { version = "0.6.0" }
embassy-stm32 = { version = "0.4.0", features = ["stm32g474re"] }
embassy-time = { version = "0.5.0" }
embassy-sync = { version = "0.7.2" }
update-manager = { path = "../update_manager" }