[package]
name = "communication"
version = "0.1.0"
edition = "2024"

[features]
defmt = ["dep:defmt", "logging/defmt", "transport/defmt", "embassy-sync/defmt", "command-handler/defmt", "crc-engine/defmt", "update-manager/defmt"]
log = ["logging/log", "embassy-sync/log", "command-handler/log", "update-manager/log"]

[dependencies]
command-handler = { path = "../command_handler" }
crc-engine = { path = "../utils/crc_engine" }

embassy-sync = { version = "0.7.2" }
embassy-futures = { version = "0.1.2" }
embassy-time = { version = "0.5.0", default-features = false }
defmt = { version = "1.0.1", optional = true }
logging = { path = "../utils/logging" }
transport = { path = "../transport" }
update-manager = { path = "../update_manager" }