[package]
name = "communication"
version = "0.1.0"
edition = "2024"

[features]
defmt = ["dep:defmt", "logging/defmt", "transport/defmt", "embassy-sync/defmt", "command-handler/defmt", "crc-engine/defmt"]
log = ["logging/log", "embassy-sync/log", "command-handler/log"]

[dependencies]
command-handler = { path = "../command_handler" }
crc-engine = { path = "../utils/crc_engine" }

embassy-sync = { version = "0.8.0" }
embassy-futures = { version = "0.1.2" }
embassy-time = { version = "0.5.1", default-features = false }
defmt = { version = "1.0.1", optional = true }
controller-shared = { path = "../controllers/controller_shared" }
logging = { path = "../utils/logging" }
transport = { path = "../transport" }