[package]
name = "firmware"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-stm32 = { version = "0.4.0", features = ["defmt", "time", "time-driver-any", "stm32g474re", "single-bank", "memory-x", "unstable-pac", "exti"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

adc = { path = "../drivers/adc", features = ["defmt"] }
as5600 = { path = "../drivers/as5600", features = ["defmt"] }
controller-shared = { path = "../controllers/controller_shared", features = ["defmt"] }
crc-engine = { path = "../utils/crc_engine", features = ["hardware"] }
inverter = { path = "../drivers/inverter", features = ["defmt"] }
logging = { path = "../utils/logging", features = ["freq-meter"] }
transport = { path = "../transport", features = ["defmt"] }
command-handler = { path = "../command_handler", features = ["defmt"] }