[package]
name = "firmware"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-stm32 = { version = "0.4.0", features = ["defmt", "time", "time-driver-any", "stm32g474re", "dual-bank", "unstable-pac", "exti"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5.1" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = { version = "2.1.1" }

adc = { path = "../drivers/adc", features = ["defmt"] }
as5600 = { path = "../drivers/as5600", features = ["defmt"] }
controller-shared = { path = "../controllers/controller_shared", features = ["defmt"] }
crc-engine = { path = "../utils/crc_engine", features = ["hardware"] }
inverter = { path = "../drivers/inverter", features = ["defmt"] }
logging = { path = "../utils/logging", features = ["freq-meter", "error-register"] }
transport = { path = "../transport", features = ["defmt"] }
communication = { path = "../communication", features = ["defmt"] }
user-config = { path = "../user_config", features = ["defmt"] }
update-manager = { path = "../update_manager", features = ["defmt"] }