[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.18"
anyhow = "1.0.100"
tokio-serial = "5.4.5"
log = "0.4.27"

[build-dependencies]
tonic-prost-build = "0.14.2"
