[package]
name = "transport"
version = "0.1.0"
edition = "2024"

[features]
defmt = ["dep:defmt", "crc-engine/defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
crc-engine = { path = "../utils/crc_engine" }

[dev-dependencies]
crc-engine = { path = "../utils/crc_engine", features = ["software"] }