[package]
name = "update-manager"
version = "0.1.0"
edition = "2024"
[features]
defmt = ["embassy-boot/defmt", "embassy-boot-stm32/defmt", "embassy-stm32/defmt", "embassy-sync/defmt"]
log = ["embassy-boot/log", "embassy-boot-stm32/log", "embassy-stm32/log", "embassy-sync/log"]

[dependencies]
embassy-embedded-hal = { version = "0.6.0" }
embassy-boot = { version = "0.7.0" }
embassy-boot-stm32 = { version = "0.8.0" }
embassy-stm32 = { version = "0.6.0", features = ["stm32g474re"] }
embassy-sync = { version = "0.8.0" }
cortex-m = { version = "0.7.7" }