[package]
name = "adc"
version = "0.1.0"
edition = "2024"


[features]
log = ["logging/log", "embassy-sync/log", "embassy-time/log"]
defmt = ["dep:defmt", "stm32-metapac/defmt", "embassy-stm32/defmt", "embassy-sync/defmt", "embassy-time/defmt", "logging/defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
stm32-metapac = { version = "21.0.0", features = ["stm32g474re"] }
embassy-stm32 = { version = "0.6.0", features = ["stm32g474re"] }
embassy-sync = { version = "0.8.0" }
embassy-time = { version = "0.5.0" }
logging = { path = "../../utils/logging" }
